<package>
  <name>gps_driver</name>
  <version>0.1.0</version>
  <description>gps_driver</description>

  <maintainer email="757238407@qq.com">chen sijie</maintainer>
  <author email="757238407@qq.com">chen sijie</author>

  <license>Private</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend> 
  <build_depend>tf</build_depend> 
  <build_depend>std_msgs</build_depend> 
  <build_depend>std_srvs</build_depend> 
  <build_depend>serial</build_depend> 
  <build_depend>geodesy</build_depend> 
  <build_depend>sensor_msgs</build_depend> 

  <run_depend>roscpp</run_depend> 
  <run_depend>std_msgs</run_depend> 
  <run_depend>std_srvs</run_depend> 
  <run_depend>geodesy</run_depend> 
  <run_depend>sensor_msgs</run_depend> 
</package>
